refactor: add units used to forecast response
